--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "illuminate/support": "^5.3",
-    "illuminate/notifications": "^5.3",
-    "illuminate/contracts": "^5.3"
+    "laravel/framework": "^6.0||^7.0||^8.0"
   },
   "autoload": {
     "psr-4": {
